# MuCplGen

./: .gitignore  CMakeLists.txt  MuCplGen.sln  MuCplGen.vcxproj  MuCplGen.vcxproj.filters  README.md  assignment_test.txt  auto.shader  complete_syntax.syn  control_syntax.syn  easy.txt  main.cpp  myCompiler.sln  myCompiler.vcxproj  myCompiler.vcxproj.filters  my_keyword.cfg  my_syntax.syn  sample_test.txt  scanner_test.txt  syntax_test.txt
Examples/AutoShaderVariableDetector/: VariableReader.h  main.cpp
Examples/Calculator/: Calculator.h  main.cpp
Examples/CalculatorCompiler/: CalculatorCompiler.h
Examples/CalculatorSubModule/: Calculator.h  main.cpp
Examples/EasyCompiler/: ExampleCompiler.h
Examples/ILGenerator/: ILGenerator.h  ILSymbolTable.cpp  ILSymbolTable.h  main.cpp
Examples/ILGenerator_pack/: ILGenerator.h  assignment_test.txt  complete_syntax.syn
Examples/PDAConflict/: main.cpp
Examples/Sequence/: main.cpp
Examples/Sequnce/: main.cpp
Examples/SolveSemanticError/: Calculator.h  main.cpp
Examples/SubParser/: Calculator.h  main.cpp
MuCplGen/: CFG.h  CFG_gen.h  ColoredText.h  CustomCodeMacro.h  DebugToken.h  DefinitionCompiler.h  EasyScanner.h  EasyToken.h  FileLoader.h  FileSystem.h  Highlight.h  LineContent.h  MuCplGen.h  MuException.h  Parser.h  Platform.h  Production_gen.h  PushDownAutomaton.h  Scanner.h  SemanticActionGen.py  SyntaxDirected.h  Token.h  semantic_action.py
MuCplGen/DebugTool/: ColoredText.h  DebugOption.h  Highlight.h  StopWatch.h
MuCplGen/SubModules/: Calculator.h  Sequence.h
codegen/: semantic_action.py  set_action.h
deprecate/: SyntaxDirected_.h
include/MuCplGen/: EasyToken.h  FileSystem.h  FunctionDeduce.h  LineContent.h  MuCplGen.h  MuException.h  Platform.h  PushDownAutomaton.h  Scanner.h  SealedValue.h  Token.h
include/MuCplGen/DebugTool/: DebugToken.h  Highlight.h
include/MuCplGen/SubModules/: Calculator.h
misc/: definition_syntax.syn  definition_test.txt  parser_test.txt  syn_highlight.xml  test_scanner.txt  test_syn.syn
